# Election_Analysis_App

./: Dockerfile  README.md
Notebooks/: Clean_EDA.ipynb  Data_Cleaning_Election_France_2024.ipynb  EDA_Election_2024.ipynb
app/: app.py  candidates_legislative_2024.csv  pyproject.toml  requirements.txt
