[tool.poetry]
name = "streamlit-app-election-analysis"
version = "0.1.0"
description = "dependencies management for streamlit data analysis app"
authors = ["RonanRibouletPython <newsletterpython13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9" 
streamlit = "1.35.0"
pandas = "^2.2.2"
plotly = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
